firmware/defmt-test/macros/tests/ui/init-has-ignore-macro.stderr
error: `#[ignore]` is not allowed on the `#[init]` function
 --> tests/ui/init-has-ignore-macro.rs:7:8
  |
7 |     fn init() {}
  |        ^^^^
