firmware/defmt-test/macros/tests/ui/init-has-ignore-macro.rs
fn main() {}

#[defmt_test_macros::tests]
mod tests {
    #[init]
    #[ignore]
    fn init() {}
}
